2013-06-03  Carlos O'Donell  <carlos@redhat.com>

	[BZ #15536]
	* math/libm-test.inc (MAX_EXP): Remove
	(MIN_EXP): Define.
	(ulp): Use MIN_EXP - MANT_DIG.
	(check_ulp): Verify subnormal ulps. Only allow a range of +/- 1 ulp.

2013-05-31  Carlos O'Donell  <carlos@redhat.com>

	* po/be.po: Revert last change.
	* po/zh_CN.po: Likewise.
	* po/header.pot: Likewise.

2013-05-31  Joseph Myers  <joseph@codesourcery.com>

	* Makefile ($(common-objpfx)linkobj/libc.so): Define
	link-libc-deps to empty as target-specific variable.
	* Makerules (link-libc-args): New variable.
	(libc-for-link): Likewise.
	(link-libc-deps): Likewise.
	(lib%.so): Depend on $(link-libc-deps).  Link with
	$(link-libc-args).
	(build-module): Link with $(link-libc-args).
	(build-module-asneeded): Likewise.
	(build-module-helper-objlist): Filter out $(link-libc-deps) from
	list of objects.
	($(common-objpfx)libc.so): Define link-libc-deps to empty as
	target-specific variable.
	($(extra-modules-build:%=$(objpfx)%.so)): Depend on
	$(link-libc-deps) instead of libc.so and libc_nonshared.a.
	* crypt/Makefile ($(objpfx)libcrypt.so): Remove dependencies on
	libc.
	* debug/Makefile ($(objpfx)libSegFault.so): Remove dependencies on
	libc and ld.so.
	($(objpfx)libpcprofile.so): Likewise.
	* dlfcn/Makefile (LDLIBS-bug-atexit3-lib.so): Remove ld.so and
	libc_nonshared.a.
	($(objpfx)libdl.so): Remove dependencies on libc and ld.so.
	* hesiod/Makefile ($(objpfx)libnss_hesiod.so): Likewise.
	* iconvdata/extra-module.mk ($(objpfx)$(mod).so): Depend on
	$(link-libc-deps).
	($(objpfx)$(mod).so): Remove dependencies on libc and ld.so.
	* locale/Makefile ($(objpfx)libBrokenLocale.so): Likewise.
	* login/Makefile ($(objpfx)libutil.so): Likewise.
	* malloc/Makefile ($(objpfx)libmemusage.so): Likewise.
	* math/Makefile ($(objpfx)libm.so): Likewise.
	* nis/Makefile ($(services:%=$(objpfx)libnss_%.so)
	$(objpfx)libnsl.so): Define libc-for-link as target-specific
	variable instead of depending directly on libc.